# robotics-assignments

./: .gitignore  .gitmodules
assignment-0/: CMakeLists.txt  SpringDamperMass.cpp  SpringDamperMass.hpp  SpringMass.cpp  SpringMass.hpp  export.cpp  main.cpp  plot.py
assignment-1/: CMakeLists.txt  gains_1.txt
assignment-1/controlDLL/: control.cpp
assignment-2/: .clang-format  CMakeLists.txt  gains_1.txt
assignment-2/controlDLL/: control.cpp
assignment-2/forwardkinematics/: forwardkinematics.cpp  forwardkinematics.hpp
assignment-2/submission-paper/overleaf/: TaskA.tex  TaskB.tex  TaskC.tex  main.tex  quellen.bib  setup.tex  title.tex
assignment-3/controlDLL/: control.cpp
assignment-3/cv/: cv_control.cpp  cv_main.cpp
assignment-4/submission-paper/overleaf/: main.tex
assignment-4/submission-paper/overleaf/tasks/A/: 1.tex
assignment-4/submission-paper/overleaf/tasks/B/: 2.tex
assignment-4/submission-paper/overleaf/tasks/C/: 3.tex
assignment-4/workspace_assignment4/: .gitignore
assignment-4/workspace_assignment4/src/localization/src/: ParticleFilter.cpp
assignment-4/workspace_assignment4/src/mapping/src/: MappingNode.cpp
